[tool.poetry]
name = "trafic signal"
version = "0.1.0"
description = ""
authors = ["NewtonMallick <new99mal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
pillow = "^11.0.0"
scikit-learn = "^1.5.2"
scikit-image = "^0.24.0"
random2 = "^1.0.2"
matplotlib = "^3.9.2"
tensorflow = "^2.18.0"
ipython = "^8.29.0"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
